package com.palantir.atlasdb.protos.generated;

message TableMetadata {
    required NameMetadataDescription rowName = 1;
    required ColumnMetadataDescription columns = 2;
    required TableConflictHandler conflictHandler = 3;
    optional CachePriority cachePriority = 4;
    optional PartitionStrategy partitionStrategy = 5;
    optional bool rangeScanAllowed = 6;
    optional bool explicitCompression = 7 [deprecated = true];
    optional bool negativeLookups = 8;
    optional SweepStrategy sweepStrategy = 9;
    optional int32 explicitCompressionBlockSizeKiloBytes = 10;
    optional bool appendHeavyAndReadLight = 11;
}

message NameMetadataDescription {
    repeated NameComponentDescription nameParts = 1;
    optional bool hasFirstComponentHash = 2;
}

message NameComponentDescription {
    required string componentName = 1;
    required ValueType type = 2;
    required ValueByteOrder order = 3;
    optional bool hasUniformPartitioner = 4;
    repeated string explicitPartitions = 5;
}

message ColumnMetadataDescription {
    repeated NamedColumnDescription namedColumns = 1;
    optional DynamicColumnDescription dynamicColumn = 2;
}

message DynamicColumnDescription {
    required NameMetadataDescription columnNameDesc = 1;
    required ColumnValueDescription value = 2;
}

message NamedColumnDescription {
    required string shortName = 1;
    required string longName = 2;
    required ColumnValueDescription value = 3;
}

message ColumnValueDescription {
    required ValueType type = 1;
    optional string className = 2;
    optional Compression compression = 3 [default = NONE];
    optional ColumnValueFormat format = 4;
    optional string canonicalClassName = 5;

    // This is the proto descriptor so we can render the message without the compiled proto files.
    optional bytes protoFileDescriptor = 6 [deprecated = true];
    // This protoName is the name of the message in the protoFileDescriptor.
    optional string protoMessageName = 7;

    optional FileDescriptorTreeProto protoFileDescriptorTree = 8;
}

message FileDescriptorTreeProto {
    required bytes protoFileDescriptor = 1;
    repeated FileDescriptorTreeProto dependencies = 2;
}

enum ValueType {
    VAR_LONG = 1;
    FIXED_LONG = 2;
    STRING = 3;
    BLOB = 4;
    VAR_SIGNED_LONG = 5;
    FIXED_LONG_LITTLE_ENDIAN = 6;
    SHA256HASH = 7;
    VAR_STRING = 8;
    NULLABLE_FIXED_LONG = 9;
    SIZED_BLOB = 10;
}

enum Compression {
    NONE = 1;
    SNAPPY = 2;
}

enum ColumnValueFormat {
    PROTO = 1;
    PERSISTABLE = 2;
    VALUE_TYPE = 3;
    PERSISTER = 4;
}

enum ValueByteOrder {
    ASCENDING = 1;
    DESCENDING = 2;
}

enum TableConflictHandler {
    IGNORE_ALL = 1;
    RETRY_ON_WRITE_WRITE = 2;
    RETRY_ON_VALUE_CHANGED = 3;
    SERIALIZABLE = 4;
    RETRY_ON_WRITE_WRITE_CELL = 5;
}

enum CachePriority {
    COLDEST = 0;
    COLD = 32;
    WARM = 64;
    HOT = 96;
    HOTTEST = 127;
}

enum PartitionStrategy {
    ORDERED = 0;
    HASH = 1;
}

enum SweepStrategy {
    NOTHING = 0;
    CONSERVATIVE = 1;
    THOROUGH = 2;
}

enum ExpirationStrategy {
    NEVER = 0;
    INDIVIDUALLY_SPECIFIED = 1;
}

